# coursera_learning

./: .gitignore  README.md
agda/: .gitignore  README.org
agda/plt/: notes.md
algo/: .gitignore  Makefile  Test.java  notes.org  prepare.sh  preparew2.sh
algo/systemCheckAssignment/: HelloGoodbye.java  HelloWorld.java  RandomWord.java  prepare.sh
algo/week1/: Homework.java  Main.java  QuickFindUF.java  QuickUnionUF.java
algo/week3/: MergeSort.java
arend/: example.ard
ats/introduction_to_programming_in_ats/: ch3_mutually_defined_tail_calls.dats  coint_exchange.dats  eight_queens.dats  hello.dats  rest_of_chapter2_after_arithmetic.dats  scratch.dats  simple_arithmetic.dats  template.dats
c_plus_plus/: stack.c
c_plus_plus/white_belt/: task1.cpp  two_natural_numbers.cpp
category_theory/milewski/: ch3.md  kleisli.cpp  kleisli.hs
compilers/parsers/: Calc.cf
coq/: fibonaci.v  fizzbuzz.v  lecture01.v
coq/cpdt/: ch1.v
effects/: state_algebraic_effect.rb
effects/implementation_with_shifts/: continuation_continued.rb  csp_style.rb  direct_style.rb
elisp/: init.el
elixir/: bitstrings.ex  cache_predictor.ex  echo_server_with_registry.ex
elm/: roll_the_dice.elm
elm/clock/: clock.elm  (+1 more)
erlang/: playground.erl  record.hrl
haskell/: ch2ex10.hs  interactive_script.hs  json_parser_by_hand.hs  learn.hs  notes.md  stream_text.hs
haskell/chapter13/hangman/: hangman.cabal
haskell_experiments/: 2  area.hs  ch2ex.hs  ch3ex.hs  data_definition.hs  do_natation_basic.hs  learn.hs  notes.md  play_by_play.hs  print1.hs  print3.hs  print3broken.hs  print3flipped.hs  temp.rb  waxon.hs
haskell_experiments/chapter14/addition/: Addition.hs  addition.cabal
idris/: .gitignore  WordLength.idr  WordLength_vec.idr  fizzbuzz.idr  hello_world.idr  listing_1_fctypes.idr  matrix.idr  notes.org
kafka/: start_kafka.sh
katas/: general_obervations.org
kqueue/: foo  one_file_watcher.c  pid_watcher.c  tcp_client.c  tcp_connections.c
logical_foundation/: basics.v
ocaml/: suffix.mly
ocaml/lexer_parser/: dune-project  lexer_parser.opam
ocaml/lexer_parser/data_samples/: json1.json  parser_error.json
ocaml/lexer_parser/lib/: dune  json.ml  lexer.mll  parser.mly
ocaml/lexer_parser/test/: dune
ocaml/xmlparser/: README.org  dune-project  xmlparser.opam
ocaml/xmlparser/data_samples/: simple.xml  tag_with_text.xml  xml.xml
ocaml/xmlparser/lib/: dune  lexer.mll  parser.conflicts  parser.mly  xml.ml
ocaml/xmlparser/test/: dune
programming_languages_partB/: foo.rkt  thunkification.rkt  worksheet.rkt
racket/: continuations.rkt
rust/: .gitignore  any_and_all.rs  complex.rs  cycle_adapter.rs  dynamic_traits.org  enums.rs  enums_1.rs  extrema.rs  from_iterator.rs  generic_enum.rs  json_ex.rs  nth.rs  queue.rs  random.rs
tlaplus/: notes.md  recycler.cfg  recycler.tla  wire.cfg
url_shortener/: Cargo.toml  router
url_shortener/src/: code_generator.rs  main.rs  router.rs  tests.rs
url_shortener/src/storage/: redis.rs  storage.rs  test.rs
url_shortener/tests/: integration_test.rs
zkp/: notes.org
(+1189 files in other folders)
