[package]
name = "url_shortener"
version = "0.1.0"
authors = ["Julian Kulesh <julian.kulesh@kupibilet.ru>"]

[dependencies]
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = "0.2.6"
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }
rustfmt = "0.8.3" 
