(lang dune 3.16)

(name lexer_parser)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lexer_parser)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   menhir
   ocaml
   dune)
 (tags
  (topics "to describe" your project)))

(using menhir 3.0)  ; Add this line to enable menhir

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
