name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/raventid/coursera_learning
license:             BSD3
license-file:        LICENSE
author:              Julian Kulesh
maintainer:          example@example.com
copyright:           2017 Julian Kulesh
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     
